Fix peer summary column width on firefox

--- a/src/app/routes/Home.scss
+++ b/src/app/routes/Home.scss
@@ -37,9 +37,5 @@
         padding: 24px;
       }
     }
-
-    .peers-summary-panel {
-      width: 350px;
-    }
   }
 }
